--- a/NissenNutrition/css/main.css
+++ b/NissenNutrition/css/main.css
@@ -52,35 +52,52 @@ body {
 }
 
 .grid-bottom{
-	position: absolute;
-	bottom: 0;
+	position:absolute;
+	bottom: 0px;
 	display: grid;
-	grid-template-columns: 50% auto auto auto auto auto;
+	grid-template-columns: 50% 30% auto;
 	color: #537569;
 	border-radius: 10px;
 	margin-top: 2%;
 	margin-left: 2%;
 	margin-right: 2%;
 	height: 150px;
+	width: 90%;
   }
   .grid-bottom a{
 	color: #EDEAE6;
 	text-decoration: none;
-	width: 100%;
-	height: 100%;
 	justify-content: center;
 	align-items: center;
-	padding-top: 50px;
 }
   .grid-itemBot{
 	color: #EDEAE6;
-
 	border-radius: 10px;
 	font-size: 30px;
-	height: 15%;
+	height: auto;
 	margin-left: 2%;
   }
 
 .TakeAction{
 	float: left;
 }
+.fa {
+	margin-top: 60px;
+	float: right;
+	padding: 20px;
+	font-size: 50px;
+	width: 30px;
+	text-align: center;
+	text-decoration: none;
+}
+.fa-facebook {
+	background: inherit;
+	color: white;
+	border-radius: 80px;
+  }
+
+.fa-instagram {
+	background: inherit;
+	color: white;
+	border-radius: 80px;
+  }
