--- a/NissenNutrition/css/main.css
+++ b/NissenNutrition/css/main.css
@@ -58,9 +58,7 @@ body {
 	grid-template-columns: 50% 30% auto;
 	color: #537569;
 	border-radius: 10px;
-	margin-top: 2%;
-	margin-left: 2%;
-	margin-right: 2%;
+	margin: auto;
 	height: 150px;
 	width: 90%;
   }
@@ -70,7 +68,8 @@ body {
 	justify-content: center;
 	align-items: center;
 }
-  .grid-itemBot{
+
+.grid-itemBot{
 	color: #EDEAE6;
 	border-radius: 10px;
 	font-size: 30px;
