--- a/NissenNutrition/css/ContactUs.css
+++ b/NissenNutrition/css/ContactUs.css
@@ -9,6 +9,17 @@ input[type=text], select, textarea {
   resize: vertical;
   color: #537569;
 }
+input[type=email], select, textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
+  color: #537569;
+}
 
 input[type=submit] {
   background-color: #537569;
