--- a/NissenNutrition/css/inPerson.css
+++ b/NissenNutrition/css/inPerson.css
@@ -21,21 +21,24 @@
     border-radius: 10px;
 	background-color: inherit;
 	font-size: 35px;
-	height: 100%;
+	height:fit-content;
+    width: 900px;
     color: #EDEAE6;
-    padding: 25px;
+    padding: 6%;
+    white-space: nowrap;
 }
 .option img{
-    width: 230px;
-    height: 230px;
+    width: 220px;
+    height: 220px;
     border-radius: 150px;
     float: left;
 }
 
 .imgHolder{
     float: left;
-    width: 25%;
+    width: 220px;
     height: 230px;
+    white-space: nowrap;
 }
 .text{
     float: left;
